--- a/Shop/card-page/index.html
+++ b/Shop/card-page/index.html
@@ -4158,23 +4158,19 @@
             <div class="product_slider">
                 <div class="container">
                     <div class="holder">
+                        <div class="clear">
+                            <button class="clear_btn">Очистить</button>
+                        </div>
                         <div class="headline">
                             <div class="title">Вы смотрели<span>(35)</span></div>
-                            <a href="#" class="button">
-						<span>Интересное</span>
-						<i class="icon-angle-right"></i>
-					</a>
                         </div>
                         <div class="slider_watched">
                             <div class="item">
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4182,11 +4178,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4194,11 +4187,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4206,11 +4196,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4218,11 +4205,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4230,11 +4214,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4242,11 +4223,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4254,11 +4232,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4266,11 +4241,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
@@ -4278,47 +4250,8 @@
                                 <div class="item_watched">
                                     <img src="images/content/you-watched1.jpg" alt="">
                                     <span class="bottom">
-								<span class="price">7 910 ₽</span>
+                                <span class="price">7 910 ₽</span>
                                     <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="item_watched">
-                                    <img src="images/content/you-watched1.jpg" alt="">
-                                    <span class="bottom">
-								<span class="price">7 910 ₽</span>
-                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="item_watched">
-                                    <img src="images/content/you-watched1.jpg" alt="">
-                                    <span class="bottom">
-								<span class="price">7 910 ₽</span>
-                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="item_watched">
-                                    <img src="images/content/you-watched1.jpg" alt="">
-                                    <span class="bottom">
-								<span class="price">7 910 ₽</span>
-                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
-                                    <span class="item_sub">
-									<a href="#">Все ванны</a>
-								</span>
                                     </span>
                                 </div>
                             </div>
