--- a/Shop/catalogue-page/app/index.html
+++ b/Shop/catalogue-page/app/index.html
@@ -1771,6 +1771,211 @@
                 </div>
             </div>
         </div>
+        <span class="bottom_line"></span>
+        <div class="popular_cat_block">
+            <div class="container">
+                <ul>
+                    <li>
+                       <div class="content_block">
+                            <a href="#">
+                                <img src="images/content/brands/roca.svg" alt="roca">
+                                <p class="description">Водонагреватели AEG</p>
+                            </a>
+                       </div>
+                    </li>
+                    <li>
+                       <div class="content_block">
+                            <a href="#">
+                                <img src="images/content/brands/roca.svg" alt="roca">
+                                <p class="description">Зеленые унитазы Roca</p>
+                            </a>
+                       </div>
+                    </li>
+                    <li>
+                       <div class="content_block">
+                            <a href="#">
+                                <img src="images/content/brands/roca.svg" alt="roca">
+                                <p class="description">Водонагреватели AEG</p>
+                            </a>
+                       </div>
+                    </li>
+                    <li>
+                       <div class="content_block">
+                            <a href="#">
+                                <img src="images/content/brands/roca.svg" alt="roca">
+                                <p class="description">Зеленые унитазы Roca</p>
+                            </a>
+                       </div>
+                    </li>
+                    <li>
+                       <div class="content_block">
+                            <a href="#">
+                                <img src="images/content/brands/roca.svg" alt="roca">
+                                <p class="description">Водонагреватели AEG</p>
+                            </a>
+                       </div>
+                    </li>
+                    <li>
+                       <div class="content_block">
+                            <a href="#">
+                                <img src="images/content/brands/roca.svg" alt="roca">
+                                <p class="description">Зеленые унитазы Roca</p>
+                            </a>
+                       </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="banner-block">
+            <div class="container">
+                <div class="banner_block bordered">
+                    <a href="#">
+                        <img src="images/content/banner-big.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="main_row block_popular">
+            <div class="container">
+            <div class="category_list row">
+                <span class="title_list col-lg-3">
+                    <p>Популярные разделы Ideal Standart</p>
+                </span>
+                <ul class="block_list col-lg-3">
+                    <li class="item"><a href="#">Встраиваемые раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Двойные раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Мини раковины для ванной / маленькие раковины для ванной</a></li>
+                    <li class="item"><a href="#">Встраиваемые раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Двойные раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Мини раковины для ванной / маленькие раковины для ванной</a></li>
+                </ul>
+                <ul class="block_list col-lg-3">
+                    <li class="item"><a href="#">Встраиваемые раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Двойные раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Мини раковины для ванной / маленькие раковины для ванной</a></li>
+                    <li class="item"><a href="#">Встраиваемые раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Двойные раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Мини раковины для ванной / маленькие раковины для ванной</a></li>
+                </ul>
+                <ul class="block_list col-lg-3">
+                    <li class="item"><a href="#">Встраиваемые раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Двойные раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Мини раковины для ванной / маленькие раковины для ванной</a></li>
+                    <li class="item"><a href="#">Встраиваемые раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Двойные раковины (умывальники)</a></li>
+                    <li class="item"><a href="#">Мини раковины для ванной / маленькие раковины для ванной</a></li>
+                </ul>
+            </div>
+            <button type="button" class="button_more">
+                <span>Развернуть</span>
+                <i class="icon-angle-down"></i>
+            </button>
+            </div>
+        </div>
+         <div class="product_slider">
+                <div class="container">
+                    <div class="holder">
+                        <div class="clear">
+                            <button class="clear_btn">Очистить</button>
+                        </div>
+                        <div class="headline">
+                            <div class="title">Вы смотрели<span>(35)</span></div>
+                        </div>
+                        <div class="slider_watched">
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item_watched">
+                                    <img src="images/content/you-watched1.jpg" alt="">
+                                    <span class="bottom">
+                                <span class="price">7 910 ₽</span>
+                                    <a href="#" class="item_title">Чугунная ванна Aqualux Delafon Cleo / Revival</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <div class="footer">
             <div class="footer_holder">
                 <div class="panel_fixed">
