--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="reg_page">
                             <div class="tab_content_block">
-                                <h2><span>цена</span>успеха</h2>
+                                <h2><span>цена</span> успеха</h2>
                                 <div class="number">
                                     <div class="left">
                                         <p><span class="left_item">паушальный взнос</span><span class="numb">1</span><span class="right_item">млн</span><span class="rub"></span></p>
@@ -422,7 +422,7 @@
                                     </div>
                                     <div class="img_box">
                                         <div class="img_content">
-                                            <img src="img/project8.svg" alt="logo">
+                                            <img src="img/topworld.png" alt="logo">
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
@@ -556,21 +556,25 @@
                                         <img src="img/project2.svg" alt="">
                                         <p>академия TOPGUN</p>
                                     </div>
-                                    <div class="block">
-                                        <img src="img/project3active.svg" alt="">
+                                    <div class="block colored">
+                                        <img class="before" src="img/project3.svg" alt="">
+                                        <img src="img/project3active.svg" alt="" class="after">
                                         <p>новый формат TOPGUN</p>
                                     </div>
-                                    <div class="block">
-                                        <img src="img/project4active.png" alt="">
+                                    <div class="block colored">
+                                        <img class="before" src="img/project4.png" alt="">
+                                        <img src="img/project4active.png" alt="" class="after">
                                         <p>первое и единственное
                                             <br>barbershow в россии</p>
                                     </div>
-                                    <div class="block">
-                                        <img src="img/project5active.png" alt="">
+                                    <div class="block colored">
+                                        <img class="before" src="img/project5.png" alt="">
+                                        <img src="img/project5active.png" alt="" class="after">
                                         <p>бизнес-практика</p>
                                     </div>
-                                    <div class="block">
-                                        <img src="img/project6active.svg" alt="">
+                                    <div class="block colored">
+                                        <img class="before" src="img/project6.svg" alt="">
+                                        <img src="img/project6active.svg" alt="" class="after">
                                         <p>визуальный мониторинг</p>
                                     </div>
                                     <div class="block">
@@ -578,7 +582,7 @@
                                         <p>магазин мужской косметики</p>
                                     </div>
                                     <div class="block">
-                                        <img src="img/project8.svg" alt="">
+                                        <img src="img/topworld.png" alt="">
                                         <p>благотворительный фонд</p>
                                     </div>
                                     <div class="block">
@@ -609,16 +613,19 @@
                                         <img src="img/project15.svg" alt="">
                                         <p>черная вода</p>
                                     </div>
-                                    <div class="block">
-                                        <img src="img/project16active.svg" alt="">
+                                    <div class="block colored">
+                                        <img class="before" src="img/project16.png" alt="">
+                                        <img src="img/project16active.svg" alt="" class="after">
                                         <p>сеть бургерных</p>
                                     </div>
-                                    <div class="block">
-                                        <img src="img/project17active.svg" alt="">
+                                    <div class="block colored">
+                                        <img class="before" src="img/project17.png" alt="">
+                                        <img src="img/project17active.svg" alt="" class="after">
                                         <p>сеть арен киберспорта</p>
                                     </div>
-                                    <div class="block">
-                                        <img src="img/crystal.png" alt="">
+                                    <div class="block colored">
+                                        <img class="before" src="img/crystal.png" alt="">
+                                        <img src="img/crystal.png" alt="" class="after">
                                         <p>Crystal lab</p>
                                     </div>
                                 </div>
