--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -84,7 +84,7 @@
                     <div class="tab_content">
                         <div class="home_page">
                             <div class="tab_content_block">
-                                <h2>самая крупная <span>и</span> успешная сеть <span>в</span> россии</h2>
+                                <h2>самая крупная <span>и</span> успешная сеть <br><span>в</span> россии</h2>
                                 <p class="number">250</p>
                                 <p class="bottom">
                                     действующих
