--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="link_trigger link1"><a href="#">НОВОСТИ</a>
                 </li>
-                <li class="link_trigger link2"><a href="#">МЕРОПРИЯТИЯ</a>
+                <li class="link_trigger link2"><a href="#">НАШИ ПАРТНЕРЫ</a>
                 </li>
                 <li class="link_trigger link3"><a href="#">СТАТИСТИКА</a>
                 </li>
@@ -104,10 +104,10 @@
                             <li class="link_trigger link1"><a href="#">НОВОСТИ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger link2"><a href="#">МЕРОПРИЯТИЯ</a>
+                            <li class="link_trigger link2"><a href="#">НАШИ ПАРТНЕРЫ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger link3"><a href="#">КАРТА COLIZEUM</a>
+                            <li class="link_trigger link3"><a href="#">НАШИ КОЛИЗЕИ</a>
                                 <div class="bg"></div>
                             </li>
                             <li class="link_trigger link4"><a href="#">ГАЛЕРЕЯ</a>
